--- a/style.css
+++ b/style.css
@@ -1230,7 +1230,7 @@ main .bg-img .main-img img {
     flex-direction: column;
   }
   .seccion-clients .container .box-clients .box-img {
-    width: 365px;
+    width: 100%;
     height: 170px;
   }
   .seccion-clients .container .box-clients .box-img .img-logo {
