--- a/style.scss
+++ b/style.scss
@@ -1351,7 +1351,7 @@ main {
 		flex-direction: column;
 				   
 		.box-img {
-			width: 365px;
+			width: 100%;
 			height: 170px;
 
 		  .img-logo {
