--- a/_fonts.scss
+++ b/_fonts.scss
@@ -1,2 +1,5 @@
+// quiza no valga la pena hacer un archivo aparte solo para el import de dos tipografias -
+// yo habria dejado estos imports en el archivo de variables. 
+
 @import url('https://fonts.googleapis.com/css?family=Montserrat:100,300,400,500,600,700&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:400,400i,600,600i,700&display=swap');
